--- a/conf/aof_example_conf.yaml
+++ b/conf/aof_example_conf.yaml
@@ -2,7 +2,7 @@ TELESCOPE:
   ao_system: AOF
   tel_diam: 8.2
   obs_diam: 1.1
-  mask: custom
+  mask: circle
 
 SHWFS:
   n_wfs: 2
@@ -22,7 +22,7 @@ SHWFS:
 
 FITTING PARAMETERS:
   n_layer: 1.
-  layer_alt: [4000.]
+  layer_alt: [0.]
   guess_r0: [0.05]
   guess_L0: [25.]
 
